--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "jac"
 uuid = "3a9803f2-2ef1-49f6-8440-7150b0de98f6"
 authors = ["tgautam03 <tushariitr3@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
